--- a/app/src/main/res/layout/fragment_birthdays.xml
+++ b/app/src/main/res/layout/fragment_birthdays.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".framework.ui.birthdays.birthdays.BirthdaysFragment">
+    tools:context=".framework.ui.birthdays.birthdays.BirthdaysFragment"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/birthdays_title"
